# AstrocytesSegmentation

./: .gitignore  Doxyfile  Makefile  README.md  config.ini  pyproject.toml  requirements.txt  setup.py  showArchitectureProject.sh
astroca/activeVoxels/: activeVoxelsFinder.py  medianFilter.py  medianFilterGPU.py  spaceMorphology.py  testMedianFilter.py  zScore.py
astroca/croppingBoundaries/: computeBoundaries.py  cropper.py
astroca/dynamicImage/: backgroundEstimator.py  dynamicImage.py
astroca/events/: CCLEventDetector.py  eventDetector.py  eventDetectorAccurate.py  eventDetectorCorrected.py  eventDetectorGPU.py  eventDetectorOptimized.py  eventDetectorPreCompute.py  eventDetectorPreComputeSafe.py  eventDetectorScipy.py  eventMergerOptimized.py  eventsFinder.py  optimizedCCLEventDetector.py  optimizedEventDetector.py  tools.py  visualizationSegementation.py
astroca/features/: coactive.py  featuresComputation.py  featuresComputationGPU.py  hotspots.py
astroca/init/: loadData.py  scene.py
astroca/parametersNoise/: parametersNoise.py  parametersNoiseGPU.py
astroca/tools/: converter.py  exportData.py  loadData.py  medianComputationTools.py  runLogger.py
astroca/varianceStabilization/: varianceStabilization.py
src/frameAttributes/: frame.py
tests/: compareFileHist.py  compareFiles.py  main.py  perf.data  visualizationSegementation.py  visualizationSegmentation.py
tests/comparingTools/: compareCSVFiles.py  compareFileHist.py  compareFiles.py  comparetextFile.py
tests/componentTest/: backgroundEstimatorTest.py  dynamicImageTest.py  eventDetectionTest.py  (+5 more)
(+3 files in other folders)
