[project]
name = "astroca"
version = "1.0.0"
description = "Segmentation and analysis of 3D + time images to extract the calcium events (variation of calcium concentration with respect to time and space)"
authors = [
    {name = "Matteo AUDIGIER"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=1.24,<2.0)",
    "tifffile (>=2025.6.11,<2026.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "numba (>=0.61.2,<0.62.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "configparser (>=7.2.0,<8.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "napari[all] (>=0.6.1,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstrument = "^5.0.3"
line-profiler = "^4.2.0"

